Extract greetings to the .env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 BOT_TOKEN_0=enter_your_token
 BOT_TOKEN_1=enter_your_token
+GREETING_0=Hello! I am the first bot.
+GREETING_1=Ahoy! I am the second bot.
